UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/AutoFieldAssignmentSettings__mdt.object-meta.xml
<CustomObject>
    <label>Auto Field Assignment Settings</label>
    <pluralLabel>Auto Field Assignment Settings</pluralLabel>
</CustomObject>