UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/ExcludedOrderStages__c.field-meta.xml
<CustomField>
    <fullName>ExcludedOrderStages__c</fullName>
    <label>Excluded Order Stages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>