UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/ExcludedRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>ExcludedRecordTypes__c</fullName>
    <label>Excluded Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>