UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/IncludedProductTypes__c.field-meta.xml
<CustomField>
    <fullName>IncludedProductTypes__c</fullName>
    <label>Included Product Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>