UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/IncludedRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>IncludedRecordTypes__c</fullName>
    <label>Included Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>