UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/IsAutomationEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAutomationEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automation Enabled?</label>
    <type>Checkbox</type>
</CustomField>