UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <label>Queue Name for Task Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>