UCF-APR2.4/ftr main/force-app/main/default/objects/AutoFieldAssignmentSettings__mdt/fields/ShouldCreateTask__c.field-meta.xml
<CustomField>
    <fullName>ShouldCreateTask__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create task on assignment?</label>
    <type>Checkbox</type>
</CustomField>